# yelp-pipeline

spark_jobs/: ingest_business_data.py  ingest_checkin_data.py  ingest_review_data.py  ingest_tip_data.py  ingest_user_data.py
terraform/: main.tf  terraform.tfvars  variables.tf
terraform/modules/api/: main.tf
terraform/modules/bigquery/: main.tf  variables.tf
terraform/modules/bigquery/schemas/: businesses.json  checkins.json  reviews.json  tips.json  users.json
terraform/modules/composer/: main.tf  variables.tf
terraform/modules/dataproc/: main.tf  variables.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
yelp-dagster/: .env.example  .gitignore  README.md  pyproject.toml
yelp-dagster/dbt/: .user.yml  dbt_project.yml  profiles.yml
yelp-dagster/dbt/models/: __models.yml  schema.yml  time_spine_daily.sql
yelp-dagster/dbt/models/marts/: user.sql  user.yml
yelp-dagster/dbt/models/staging/: __sources.yml  overview.md  schema.yml  sources.yml  stg_business.sql  stg_business.yml  stg_checkin.sql  stg_checkin.yml
yelp-dagster/dbt/seeds/: schema.yml
yelp-dagster/src/yelp_dagster/defs/: partitions.py  resources.py
yelp-dagster/src/yelp_dagster/defs/dlt/: __init__.py
yelp-dagster/src/yelp_dagster/defs/dlt/sources/: __init__.py  yelp_filesystem.py
