[project]
name = "yelp_dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "botocore[crt]>=1.41.5",
    "dagster==1.12.7",
    "dagster-dbt>=0.28.7",
    "dagster-dlt>=0.28.7",
    "dbt-athena>=1.10.0",
    "dbt-duckdb>=1.10.0",
    "dlt[athena,s3]>=1.20.0",
    "psutil>=7.2.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "yelp_dagster"
registry_modules = [
    "yelp_dagster.components.*",
]


